responsive for tablet and mobile

--- a/SparcFeatures/Community/CommunityCta.razor
+++ b/SparcFeatures/Community/CommunityCta.razor
@@ -1,6 +1,6 @@
 ﻿
 <div class="community-cta">
-    <div class="community-card">
+    <div class="community-card left">
         <div class="card-header">
             <h6 class="semi-bold">Individuals</h6>
             <p>
