--- a/SparcFeatures/Pages/Index.razor
+++ b/SparcFeatures/Pages/Index.razor
@@ -6,7 +6,7 @@
     <section class="home-hero">
         <header class="center">
             <h1>
-                String for a world where
+                Striving for a world where
                 <span class="invert">startups</span>
                 are owned by those who 
                 <span class="invert">built them</span>
@@ -29,7 +29,7 @@
     </section>
 
     <div class="content @Scrollable">
-        <section class="mission" id="mission">
+        <section class="mission white-background" id="mission">
             <div class="mission-wrapper">
                 <div class="mission-icon">
                     <img src="images/icons/04.svg" />
@@ -63,22 +63,22 @@
                 </div>
                 <h2 class="subtitle-large">Our three values, by which sparc and its community function.</h2>
             </header>
-            <div class="card-wrapper">
-                <div class="card-value">
+            <div class="values-wrapper">
+                <div class="value-card">
                     <div class="icon">
                         <img src="images/icons/02.svg" />
                     </div>
                     <p class="subtitle-large">Self-Governance</p>
                     <p class="subtitle-medium">At each fork in the road, the members themselves vote for the direction that Sparc goes. There is no board, no executive team, no outside owners to override us. Where we want to go, we go together, and we learn together.</p>
                 </div>
-                <div class="card-value">
+                <div class="value-card">
                     <div class="icon">
                         <img src="images/icons/07.svg" />
                     </div>
                     <p class="subtitle-large">Self-Sufficiency</p>
                     <p class="subtitle-medium">Every profitable startup created at Sparc retains a certain percentage of its profit to give forward to the next projects. All the rest belongs to the people.</p>
                 </div>
-                <div class="card-value">
+                <div class="value-card">
                     <div class="icon">
                         <img src="images/icons/08.svg" />
                     </div>
@@ -89,63 +89,61 @@
         </section>
 
         <section class="projects">
-            <div class="left">
+            <header class="left">
                 <div class="section-tag project-tag">
                     <p class="subtitle-medium">Sparc Projects</p>
                 </div>
-                <h5 class="subtitle-large">To put this belief into practice, we have self funded a few initial startups, which, once profitable will be able to continue to fund following startups through to their own profitability.</h5>
+                <h2 class="subtitle-large">To put this belief into practice, we have self funded a few initial startups, which, once profitable will be able to continue to fund following startups through to their own profitability.</h2>
                 <a class="link-large" href="/projects">View All Projects <img src="images/icons/Icon Right.svg" /></a>
-            </div>
+            </header>
             <div class="projects-wrapper right">
-                <div class="card-wrapper">
-                    <ProjectCard 
-                        Title="KodeKit" 
-                        Status="Live"
-                        ImgUrl="/images/Laptop.png"
-                        Link="https://www.kodekit.io/"
-                        Github="https://github.com/sparc-coop/kodekit"
-                        Content="@KodekitText"
-                        ChannelId="kodekit-content"/>
-                    <ProjectCard
-                        Title="Ibis" 
-                        Status="Live"
-                        ImgUrl="/images/ibis.png"
-                        Link="https://ibis.chat"
-                        Github="https://github.com/sparc-coop/ibis"
-                        Content="@IbisText"
-                        ChannelId="ibis-content"/>
-                    <ProjectCard
-                        Title="Law of 100" 
-                        Status="Live"
-                        ImgUrl="/images/lawof100.png"
-                        Link="https://lawof100.co/"
-                        Github="https://github.com/sparc-coop/law-of-100"
-                        Content="@LawofText"
-                        ChannelId="lawof100-content"/>
-                </div>
+                <ProjectCard 
+                    Title="KodeKit" 
+                    Status="Live"
+                    ImgUrl="/images/Laptop.png"
+                    Link="https://www.kodekit.io/"
+                    Github="https://github.com/sparc-coop/kodekit"
+                    Content="@KodekitText"
+                    ChannelId="kodekit-content"/>
+                <ProjectCard
+                    Title="Ibis" 
+                    Status="Live"
+                    ImgUrl="/images/ibis.png"
+                    Link="https://ibis.chat"
+                    Github="https://github.com/sparc-coop/ibis"
+                    Content="@IbisText"
+                    ChannelId="ibis-content"/>
+                <ProjectCard
+                    Title="Law of 100" 
+                    Status="Live"
+                    ImgUrl="/images/lawof100.png"
+                    Link="https://lawof100.co/"
+                    Github="https://github.com/sparc-coop/law-of-100"
+                    Content="@LawofText"
+                    ChannelId="lawof100-content"/>
             </div>
         </section>
 
-        <section class="community">
+        <section class="community white-background">
             <header>
                 <div class="section-tag community-tag"><p class="subtitle-medium">Sparc Community</p></div>
-                <h5 class="subtitle-large semi-bold">
+                <h2 class="subtitle-large semi-bold">
                     Our projects are just one way we plan to combat this issue within the startup world, 
                     but another way is to share information, process, resources and more with individuals 
                     and companies who align with our values and our goals.
-                </h5>
+                </h2>
             </header>
             <Sparc.Coop.Community.CommunityCta />
         </section>
 
-        <section class="resources">
+        <section class="resources white-background">
             <header>
                 <div class="section-tag resources-tag"><p class="subtitle-medium">Sparc Resources</p></div>
-                <h5 class="subtitle-large semi-bold">
+                <h2 class="subtitle-large semi-bold">
                     Our projects are just one way we plan to combat this issue within the startup world, 
                     but another way is to share information, process, resources and more with individuals 
                     and companies who align with our values and our goals.
-                </h5>
+                </h2>
             </header>
         </section>
     </div>
