--- a/SparcFeatures/Community/CommunityCta.razor
+++ b/SparcFeatures/Community/CommunityCta.razor
@@ -4,8 +4,7 @@
         <div class="card-header">
             <h6 class="semi-bold">Individuals</h6>
             <p>
-                At an individual level, we want to provide guidance, resources and anything else we 
-                can to help you find similar companies, fit into our projects or build your own.
+                Join our community to receive project updates, individual position openings, and other Sparc news.
             </p>
         </div>
         <div class="community-signup">
@@ -23,14 +22,14 @@
         <div class="card-header">
             <h6 class="semi-bold">Companies</h6>
             <p>
-                As a company, you have the ability to lead by example, and so we want to partner 
-                with companies to expand our “sparc coop” and proudly show our values are aligned.
+                As a company, you have the ability to lead your team, and other teams, by example. Partner 
+                with us to expand our cooperative and proudly show your peers that you are a fair, equitable company.
             </p>
         </div>
         <div class="community-signup">
             <p>Join our movement</p>
             <div class="community-join">
-                <a href="mailto:info@sparc.coop?subject=Sparc Align Partner Application">Apply to become Sparc Align</a>
+                <a href="mailto:info@sparc.coop?subject=Sparc Align Partner Application">Apply to Sparc</a>
             </div>
         </div>
     </div>
