--- a/SparcFeatures/Pages/Index.razor
+++ b/SparcFeatures/Pages/Index.razor
@@ -6,12 +6,12 @@
     <section class="home-hero">
         <header class="center">
             <h1>
-                Striving for a world where
+                What if
                 <span class="invert">startups</span>
-                are owned by those who 
-                <span class="invert">built them</span>
+                were owned equally by the 
+                <span class="invert">workers</span> who built them?
             </h1>
-            <p class="subtitle-1">Sparc is a community of individuals & organizations who believe there is a better way to fund, build and reward startups.</p>
+            <p class="subtitle-1">Sparc is a cooperative of individuals & organizations who believe there is a better way to fund, build, and reward startups.</p>
         </header>
         <div class="cta-box">
             <div class="box-header">
@@ -61,28 +61,28 @@
                 <div class="section-tag values-tag">
                     <p class="subtitle-medium">Our Core Values</p>
                 </div>
-                <h2 class="subtitle-large">Our three values, by which sparc and its community function.</h2>
+                <h2 class="subtitle-large">Three values through which Sparc and its community speak:</h2>
             </header>
             <div class="values-wrapper">
                 <div class="value-card">
                     <div class="icon">
                         <img src="images/icons/02.svg" />
                     </div>
-                    <p class="subtitle-large">Self-Governance</p>
+                    <p class="subtitle-large">We self-govern</p>
                     <p class="subtitle-medium">At each fork in the road, the members themselves vote for the direction that Sparc goes. There is no board, no executive team, no outside owners to override us. Where we want to go, we go together, and we learn together.</p>
                 </div>
                 <div class="value-card">
                     <div class="icon">
                         <img src="images/icons/07.svg" />
                     </div>
-                    <p class="subtitle-large">Self-Sufficiency</p>
+                    <p class="subtitle-large">We self-sustain</p>
                     <p class="subtitle-medium">Every profitable startup created at Sparc retains a certain percentage of its profit to give forward to the next projects. All the rest belongs to the people.</p>
                 </div>
                 <div class="value-card">
                     <div class="icon">
                         <img src="images/icons/08.svg" />
                     </div>
-                    <p class="subtitle-large">Self-Determination</p>
+                    <p class="subtitle-large">We self-define</p>
                     <p class="subtitle-medium">Each member of Sparc defines their own role, as they know their skills best. And they own that role completely, including every decision it requires. They are the trusted expert by default.</p>
                 </div>
             </div>
@@ -93,7 +93,7 @@
                 <div class="section-tag project-tag">
                     <p class="subtitle-medium">Sparc Projects</p>
                 </div>
-                <h2 class="subtitle-large">To put this belief into practice, we have self funded a few initial startups, which, once profitable will be able to continue to fund following startups through to their own profitability.</h2>
+                <h2 class="subtitle-large">To put this belief into practice, Sparc has built a few initial startups. Each startup is open source, and every project is owned equally by its members. </h2>
                 <a class="link-large" href="/projects">View All Projects <img src="images/icons/Icon Right.svg" /></a>
             </header>
             <div class="projects-wrapper right">
@@ -128,15 +128,14 @@
             <header>
                 <div class="section-tag community-tag"><p class="subtitle-medium">Sparc Community</p></div>
                 <h2 class="subtitle-large semi-bold">
-                    Our projects are just one way we plan to combat this issue within the startup world, 
-                    but another way is to share information, process, resources and more with individuals 
-                    and companies who align with our values and our goals.
+                    Sparc is a community of people who believe in the power of cooperation. If you've got a skill, 
+                    project, or idea that you think could benefit from the cooperative model, we'd love to hear from you.
                 </h2>
             </header>
             <Sparc.Coop.Community.CommunityCta />
         </section>
 
-        <section class="resources white-background">
+        @*<section class="resources white-background">
             <header>
                 <div class="section-tag resources-tag"><p class="subtitle-medium">Sparc Resources</p></div>
                 <h2 class="subtitle-large semi-bold">
@@ -145,7 +144,7 @@
                     and companies who align with our values and our goals.
                 </h2>
             </header>
-        </section>
+        </section>*@
     </div>
 </div>
 
