--- a/SparcFeatures/Projects/ProjectsList.razor
+++ b/SparcFeatures/Projects/ProjectsList.razor
@@ -9,7 +9,7 @@
                 <img src="./images/icons/09-yellow.svg" />
                 </div>
                 <div>
-                    <h2 class="title-1">Every great idea starts with a spark. Explore our journey to bring ideas to reality. </h2>
+                    <h2 class="title-1">Every great idea begins with a sparc. Explore our journey to bring some of our ideas to sustainable reality.</h2>
                 </div>
 @*                <div class="project-tags">
                     <button class="btn-small tag">Productivity</button>
