--- a/SparcFeatures/App.Variables.scss
+++ b/SparcFeatures/App.Variables.scss
@@ -6,7 +6,9 @@ $blue-500: #2A74FF;
 $blue-100: #EBF2FF;
 $green-500: #06EFC2;
 $green-100: #EBFFFB;
+$peach-600: #FE4235;
 $peach-500: #FF756A;
+$peach-400: #FF9087;
 $peach-100: #FFECEB;
 $purple-500: #0C0662;
 $purple-100: #ECEBFF;
