--- a/SparcFeatures/Pages/Index.razor
+++ b/SparcFeatures/Pages/Index.razor
@@ -19,7 +19,7 @@
             </div>
             <div class="cta-flex">
                 <input placeholder="Your Email" @bind="@EmailAddress"/>
-                <button @onclick="SendEmail">Join the community</button>
+                <button class="btn-black" @onclick="SendEmail">Join the community</button>
             </div>
         </div>
         <div class="learn-more">
@@ -100,7 +100,7 @@
                 <ProjectCard 
                     Title="KodeKit" 
                     Status="Live"
-                    ImgUrl="/images/Laptop.png"
+                    ImgUrl="/images/projects/Kodekit mockup.png"
                     Link="https://www.kodekit.io/"
                     Github="https://github.com/sparc-coop/kodekit"
                     Content="@KodekitText"
@@ -108,7 +108,7 @@
                 <ProjectCard
                     Title="Ibis" 
                     Status="Live"
-                    ImgUrl="/images/ibis.png"
+                    ImgUrl="/images/projects/Ibis mockup.png"
                     Link="https://ibis.chat"
                     Github="https://github.com/sparc-coop/ibis"
                     Content="@IbisText"
@@ -116,7 +116,7 @@
                 <ProjectCard
                     Title="Law of 100" 
                     Status="Live"
-                    ImgUrl="/images/lawof100.png"
+                    ImgUrl="/images/projects/Law of 100 mockup.png"
                     Link="https://lawof100.co/"
                     Github="https://github.com/sparc-coop/law-of-100"
                     Content="@LawofText"
