--- a/SparcFeatures/Pages/Index.scss
+++ b/SparcFeatures/Pages/Index.scss
@@ -98,6 +98,10 @@ body.ibis-translating {
 
         .cta-flex {
             justify-content: space-between;
+
+            input {
+                color: $grey-500;
+            }
         }
 
         .cta-email {
