--- a/SparcFeatures/Community/CommunityCta.razor
+++ b/SparcFeatures/Community/CommunityCta.razor
@@ -1,6 +1,7 @@
 ﻿
 <div class="community-cta">
     <div class="community-card left">
+        <img class="hero" src="./images/Icons.svg" />
         <div class="card-header">
             <h6 class="semi-bold">Individuals</h6>
             <p>
@@ -9,10 +10,9 @@
             </p>
         </div>
         <div class="community-signup">
-            <p>Join our community</p>
             <div class="community-join">
                 <input @bind="@EmailAddress" placeholder="Your Email"/>
-                <button @onclick="SendEmail" class="btn-large">Join</button>
+                <button @onclick="SendEmail" class="btn-red">Join</button>
             </div>
         </div>
     </div>
@@ -23,14 +23,12 @@
         <div class="card-header">
             <h6 class="semi-bold">Companies</h6>
             <p>
-                As a company, you have the ability to lead by example, and so we want to partner 
-                with companies to expand our “sparc coop” and proudly show our values are aligned.
+                As a company, you have the ability to lead your team, and other teams, by example. Partner with us to expand our cooperative and proudly show your peers that you are a fair, equitable company.
             </p>
         </div>
         <div class="community-signup">
-            <p>Join our movement</p>
             <div class="community-join">
-                <a href="mailto:info@sparc.coop?subject=Sparc Align Partner Application">Apply to become Sparc Align</a>
+                <a class="btn-red" href="mailto:info@sparc.coop?subject=Sparc Align Partner Application">Join Sparc Movement</a>
             </div>
         </div>
     </div>
